# ECO_MainControllerMCU

./: .cproject  .deepsource.toml  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  MemMap.ld  README.md  STM32F401CCUX_BOOT.ld  STM32F401CCUX_FLASH.ld  Suncontroller CPU Debug.launch  Suncontroller CPU.ioc  Suncontroller CPU.txt  Toolchain-arm-gcc.cmake  arm-none-eabi-gcc.cmake  kosz.txt
Bootloader/: bootloader.c  memorymap.h
BootloaderSrc/: bootloader.c  memory_map.h
CMake/: GNU-ARM-Toolchain.cmake
Common/: CMakeLists.txt
Common/drivers/W25Q64/: W25Q64_Flash.c  W25Q64_Flash.h
Common/flash/flash_map_backend/: flash_map_backend.c  flash_map_backend.h
Common/flash/mcuboot_config/: mcuboot_assert.h  mcuboot_config.h  mcuboot_logging.h
Common/flash/os/: os_malloc.h
Common/flash/sysflash/: sysflash.h
Core/Inc/: FreeRTOSConfig.h  UART_DMA.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: UART_DMA.c  freertos.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  syscalls.c
Core/Src/AnalogOut/: DAC.c  DAC.h
Core/Src/CLI/: CLI.c  CLI.h
Core/Src/ConfigEEPROM/: config.c  config.h  drv_EEPROM.c  drv_EEPROM.h
Core/Src/Ethernet/: socket.c  socket.h
Core/Src/Expander/: mcp23017.h
Core/Src/Flash/: dataLog.c  dataLog.h  w25qxx.c  w25qxx.h  (+1 more)
Debug/: .fuse_hidden00000a7400000001  .fuse_hidden00000a7700000002  .fuse_hidden00000a7a00000003  .fuse_hidden00000a7d00000004  .fuse_hidden00000a8400000005  .fuse_hidden00000a8700000006  .fuse_hidden00000d6300000001  .fuse_hidden00000e9400000001  .fuse_hidden00000e9700000002  .gitignore  Suncontroller CPU.list  makefile  objects.list  sources.mk
ECO_MainMCU_App/: .cproject  .mxproject  .project  CMakeLists.txt  ECO_MainMCU_App.ioc  ECO_MainMCU_App.launch  GNU-ARM-Toolchain.cmake  Makefile  STM32G0B1RETx_.ld  STM32G0B1RETx_FLASH.ld  file_list.cmake  memory-sections.ld
ECO_MainMCU_App/Application/Application/: HMI.c
ECO_MainMCU_App/Application/Application/Led/Cfg/: LED_Cfg.c  LED_Cfg.h
ECO_MainMCU_App/Application/Application/Led/Src/: LED.c  LED.h  LED_Types.h
ECO_MainMCU_App/Application/Application/TemperatureControl/Src/: TemperatureControl.c  TemperatureControl.h
ECO_MainMCU_App/Application/Communication/MQTT/Src/: MQTT.c  MQTT.h
ECO_MainMCU_App/Application/Communication/Modbus/RTUMaster/: ModbusRTUMaster.c  ModbusRTUMaster.h
ECO_MainMCU_App/Application/Communication/Modbus/TCPServer/: ModbusTCPServer.c  ModbusTCPServer.h
ECO_MainMCU_App/Application/Communication/Network/Cfg/: Ethernet_Cfg.c  Ethernet_Cfg.h
ECO_MainMCU_App/Application/Communication/Network/Src/: Ethernet.c  Ethernet.h  EthernetRequest.h  Ethernet_Defs.h
ECO_MainMCU_App/Application/DeviceDrivers/DAC/Src/: DAC.c  DAC.h
ECO_MainMCU_App/Application/DeviceDrivers/EEPROM/Src/: EEPROM.c  EEPROM.h
ECO_MainMCU_App/Application/DeviceDrivers/EnergyMeter/Src/: EnergyMeter.c  EnergyMeter.h
ECO_MainMCU_App/Application/DeviceDrivers/Ethernet/: socket.h  wizchip_conf.c  wizchip_conf.h
ECO_MainMCU_App/Application/DeviceDrivers/Ethernet/W5500/: w5500.h
ECO_MainMCU_App/Application/DeviceDrivers/HMI/Src/: HMI.c  HMI.h  HMI_SWUpdate.c  HMI_SWUpdate.h
ECO_MainMCU_App/Application/DeviceDrivers/Heater/Cfg/: Heater_Cfg.c  Heater_Cfg.h
ECO_MainMCU_App/Application/DeviceDrivers/Heater/Src/: Heater.c  Heater.h
ECO_MainMCU_App/Application/DeviceDrivers/MCP23017/Src/: MCP23017.c  MCP23017.h
ECO_MainMCU_App/Application/DeviceDrivers/MCU/HALHelpers/: HALHelpers.c
ECO_MainMCU_App/Application/DeviceDrivers/MCU/MCU_SWUpdate/Src/: MCU_SWUpdate.c  MCU_SWUpdate.h
ECO_MainMCU_App/Application/DeviceDrivers/W25Qxx/Cfg/: w25qxxConf.h
ECO_MainMCU_App/Application/DeviceDrivers/W25Qxx/Src/: w25qxx.c  w25qxx.h
ECO_MainMCU_App/Application/Libraries/sys/: syscalls.c  sysmem.c
ECO_MainMCU_App/Application/RTOS/: FreeRTOSConfig.h
ECO_MainMCU_App/Application/RTOS/FreeRTOS/include/: mpu_prototypes.h  projdefs.h
ECO_MainMCU_App/Application/RTOS/RTOSHelpers/: RTOS_Helpers.c  RTOS_Helpers.h
ECO_MainMCU_App/Application/Services/CLI/FreeRTOS_CLI/: FreeRTOS_CLI.h
ECO_MainMCU_App/Application/Services/CLI/Src/: CLI.c  CLI.h
ECO_MainMCU_App/Application/Services/ConfigMgr/Src/: ConfigMgr.c  ConfigMgr.h
ECO_MainMCU_App/Application/Services/DateTimeMgr/Src/: DateTimeMgr.c  DateTimeMgr.h
ECO_MainMCU_App/Application/Services/EventLog/Src/: EventLog.c  EventLog.h
ECO_MainMCU_App/Application/Services/I2CGpio/Src/: I2CGpio.c  I2CGpio.h
ECO_MainMCU_App/Application/Services/Internet/DNS/: dns.h
ECO_MainMCU_App/Application/Services/Internet/FTPClient/: stdio_private.h
ECO_MainMCU_App/Application/Services/Internet/MQTT/: mqtt_interface.h
ECO_MainMCU_App/Application/Services/Internet/SNTP/: sntp.h
ECO_MainMCU_App/Application/Services/Internet/TFTP/: tftp.c
ECO_MainMCU_App/Application/Services/ResourceGuard/Src/: ResourceGuard.c  ResourceGuard.h
ECO_MainMCU_App/Application/Services/RingBuffer/Src/: ring.c  ring.h
ECO_MainMCU_App/Application/Services/RuntimeStats/Src/: CommStats.c  RuntimeStats.h
ECO_MainMCU_App/Application/Services/SPIFlash/Cfg/: SPI_Flash_Cfg.h
ECO_MainMCU_App/Application/Services/SPIFlash/Src/: SPI_Flash.c  SPI_Flash.h
ECO_MainMCU_App/Application/Services/SWUpdate/Src/: SWUpdate.c  SWUpdate.h  SWUpdate_Types.h
ECO_MainMCU_App/Application/Services/printf/: printf_config.h
ECO_MainMCU_App/Application/Src/: app_mbedtls_config.h  application.c  application.h
ECO_MainMCU_App/Core/Inc/: logging.h  main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h  usart.h
ECO_MainMCU_App/Core/Src/: adc.c  crc.c  dma.c  fdcan.c  gpio.c  i2c.c  main.c  spi.c  stm32g0xx_it.c  tim.c  usart.c
ECO_MainMCU_App/Drivers/STM32G0xx_HAL_Driver/Inc/: stm32g0xx_hal_uart_ex.h
ECO_MainMCU_Btld/: .cproject  .mxproject  .project  ECO_MainMCU_Btld.ioc  ECO_MainMCU_Btld.launch  Makefile  STM32G0B1RETx_.ld
ECO_Updater/: .env  Cargo.toml
ECO_Updater/src/: main.rs
ECO_Updater_v2/: main.py  swdl.proto  updater.py
ECO_Updater_v2/protobuf/: swdl_pb2.py
Release/: Suncontroller CPU.list  makefile  objects.list  sources.mk
(+119 files in other folders)
